﻿更新履歴

20211017.49
・livedlのあるディレクトリ以外から実行する時カレントディレクトリにconf.dbが作成されるのを修正
https://egg.5ch.net/test/read.cgi/software/1595715643/922
例: C:\bin\livedl\livedl.exe を D:\home\tmp をカレントディレクトリとして実行した場合、conf.dbは D:\home\tmp に作成されてしまう

仕様：conf.dbは実行するlivedlと同じディレクトリに作成する
      ただし、オプション -no-chdir が指定された場合はカレントディレクトリにconf.dbを作成する
      (livedl実行ファイルがユーザ書き込み権限のないディレクトリにある場合を想定)

20210607.48
・livedl で YouTube Live のアーカイブコメントの取得開始時刻を指定するオプション
https://egg.5ch.net/test/read.cgi/software/1595715643/789

使用例：
　livedl -yt-comment-start 3:21:06 https://～
  特殊例 0：続きからコメント取得  1：最初からコメント取得

20210202.47
・livedl で-yt-no-streamlink=on -yt-no-youtube-dl=on が指定されたとき、YouTube Live のコメントを永久に取得し続けるパッチ
https://egg.5ch.net/test/read.cgi/software/1595715643/567

・livedl を YouTube Live の直近の仕様変更に対応
https://egg.5ch.net/test/read.cgi/software/1595715643/559

20210128.46
・金額のフォーマットの要望ないみたいだからこっちで勝手に決めさせてもらったよ
https://egg.5ch.net/test/read.cgi/software/1595715643/543

Youtube Liveのコメントにamount属性を追加

・livedl で YouTubeLive リプレイのコメントが取れるよう直したよ
https://egg.5ch.net/test/read.cgi/software/1595715643/523

Youtube Liveのコメントが途中で切れるのを修正
Youtube liveのアーカイブダウンロード中に`json decode error'となり中断するのを修正
(404エラーになる場合は少しwaitする)

20210102.45
・livedl で一部コメントが保存されないのを修正するパッチ
https://egg.5ch.net/test/read.cgi/software/1595715643/457

・Remove VPOS > 0 (Commit 03417972d920cce0af92221583fc42bc559ef469)
　（VPOS<0のコメントが抜けるため削除した）

20201221.44
・livedl で waybackkey の取得方法を変更するパッチ
https://egg.5ch.net/test/read.cgi/software/1595715643/424

20201213.43
・livedl で YouTube Live を扱えるようにするためのパッチ（リビジョン1）
patch は livedl.youtube-r1.patch のみ適用
https://egg.5ch.net/test/read.cgi/software/1595715643/402
https://egg.5ch.net/test/read.cgi/software/1595715643/406

20201115.42
・livedl で HTTP のタイムアウト時間を変更できるようにするパッチ
https://egg.5ch.net/test/read.cgi/software/1595715643/272

20201026.41
・旧配信のタイムシフトを録画できるようにするパッチ
https://egg.5ch.net/test/read.cgi/software/1595715643/228

20201008.40
・XMLコメントのname属性(出演者が名前付きのコメントする時に使用)を保存するように修正